--- a/frontend/verify/index.html
+++ b/frontend/verify/index.html
@@ -67,7 +67,7 @@
 
                 <div class="page-title-head d-flex align-items-sm-center flex-sm-row flex-column gap-2">
                     <div class="flex-grow-1">
-                        <h4 class="fs-18 text-uppercase fw-bold mb-0">Order Details</h4>
+                        <h4 class="fs-18 text-uppercase fw-bold mb-0">Verify Details</h4>
                     </div>
 
                     <div class="text-end">
@@ -318,14 +318,50 @@
                     </div>
                     <div class="col-xl-4 col-lg-12">
                         <div class="card">
+                            <div class="card-header border-bottom">
+                                <h5 class="card-title mb-0">Purchase Summary</h5>
+                            </div>
                             <div class="card-body">
-                                <div class="mapouter">
-                                    <div class="gmap_canvas"><iframe class="gmap_iframe rounded" width="100%"
-                                            style="height: 264px;" frameborder="0" scrolling="no" marginheight="0"
-                                            marginwidth="0"
-                                            src="https://maps.google.com/maps?width=1980&amp;height=400&amp;hl=en&amp;q=University of Oxford&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-                                    </div>
+                                <div class="table-responsive">
+                                    <table class="table mb-0 table-borderless">
+                                        <tbody>
+                                            <tr>
+                                                <td class="px-0">
+                                                    <p class="mb-0 fs-15 fw-medium"> Sub Total : </p>
+                                                </td>
+                                                <td class="text-end text-dark fs-14 fw-medium px-0">$1001.8</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="px-0">
+                                                    <p class="mb-0 fs-15 fw-medium">Discount : </p>
+                                                </td>
+                                                <td class="text-end text-dark fs-14 fw-medium px-0">-$120.00</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="px-0">
+                                                    <p class="mb-0 fs-15 fw-medium">Delivery Charge : </p>
+                                                </td>
+                                                <td class="text-end text-success fs-14 fw-medium px-0">Free</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="px-0">
+                                                    <p class="mb-0 fs-15 fw-medium">Estimated Tax (18.5%) : </p>
+                                                </td>
+                                                <td class="text-end text-dark fs-14 fw-medium px-0">$30.00</td>
+                                            </tr>
+
+                                        </tbody>
+                                    </table>
                                 </div>
+                            </div>
+                            <div class="card-footer d-flex align-items-center justify-content-between border-top">
+                                <div>
+                                    <p class="fw-medium text-dark mb-0 fs-15">Grand Amount</p>
+                                </div>
+                                <div>
+                                    <p class="fw-medium fs-14 text-dark mb-0">$911.8</p>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -407,55 +443,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-12">
-                        <div class="card">
-                            <div class="card-header border-bottom">
-                                <h5 class="card-title mb-0">Purchase Summary</h5>
-                            </div>
-                            <div class="card-body">
-                                <div class="table-responsive">
-                                    <table class="table mb-0 table-borderless">
-                                        <tbody>
-                                            <tr>
-                                                <td class="px-0">
-                                                    <p class="mb-0 fs-15 fw-medium"> Sub Total : </p>
-                                                </td>
-                                                <td class="text-end text-dark fs-14 fw-medium px-0">$1001.8</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="px-0">
-                                                    <p class="mb-0 fs-15 fw-medium">Discount : </p>
-                                                </td>
-                                                <td class="text-end text-dark fs-14 fw-medium px-0">-$120.00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="px-0">
-                                                    <p class="mb-0 fs-15 fw-medium">Delivery Charge : </p>
-                                                </td>
-                                                <td class="text-end text-success fs-14 fw-medium px-0">Free</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="px-0">
-                                                    <p class="mb-0 fs-15 fw-medium">Estimated Tax (18.5%) : </p>
-                                                </td>
-                                                <td class="text-end text-dark fs-14 fw-medium px-0">$30.00</td>
-                                            </tr>
-
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                            <div class="card-footer d-flex align-items-center justify-content-between border-top">
-                                <div>
-                                    <p class="fw-medium text-dark mb-0 fs-15">Grand Amount</p>
-                                </div>
-                                <div>
-                                    <p class="fw-medium fs-14 text-dark mb-0">$911.8</p>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
+                
                 </div>
 
                 <div class="d-flex justify-content-end gap-2 text-end mb-3">
