--- a/frontend/verify/index.html
+++ b/frontend/verify/index.html
@@ -70,6 +70,26 @@
                         <h4 class="fs-18 text-uppercase fw-bold mb-0">Verify Details</h4>
                     </div>
 
+                     <div class="d-flex flex-grow-1 align-items-center gap-2">
+
+
+                   
+                        <div class="topbar-item d-none d-sm-flex">
+                            <button class="topbar-link btn btn-outline-primary btn-icon" type="button">
+                                <i class="ti ti-tag fs-22"></i>
+                            </button>
+                        </div>
+
+                     
+                        <div class="topbar-item d-none d-sm-flex">
+                            <button class="topbar-link btn btn-outline-primary btn-icon" type="button">
+                                <i class="ti ti-receipt fs-22"></i>
+                            </button>
+                        </div>
+
+
+                    </div>
+
                     <div class="text-end">
                         <ol class="breadcrumb m-0 py-0">
                             <li class="breadcrumb-item"><a href="https://www.infjew.com">INFJEW</a></li>
