--- a/frontend/verify/index.html
+++ b/frontend/verify/index.html
@@ -104,7 +104,7 @@
 
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="card">
+                        <div class="card placeholder-glow">
                             <div class="card-body">
                                 <div class="row align-items-start justify-content-between">
                                     <div class="col-lg-5">
@@ -152,7 +152,7 @@
 
                 <div class="row">
                     <div class="col-xl-3 col-lg-6">
-                        <div class="card">
+                        <div class="card placeholder-glow">
                             <div class="card-body">
                                 <div class="d-flex align-items-center justify-content-between">
                                     <div
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div class="col-xl-3 col-lg-6">
-                        <div class="card">
+                        <div class="card placeholder-glow">
                             <div class="card-body">
                                 <div class="d-flex flex-wrap align-items-center justify-content-between gap-2">
                                     <div
@@ -207,7 +207,7 @@
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-12">
-                        <div class="card">
+                        <div class="card placeholder-glow">
                             <div class="card-body">
                                 <div
                                     class="avatar-lg bg-light d-flex align-items-center justify-content-center rounded">
@@ -244,7 +244,7 @@
 
                 <div class="row">
                     <div class="col-xl-4 col-lg-6">
-                        <div class="card">
+                        <div class="card placeholder-glow">
                             <div class="card-header border-bottom">
                                 <h5 class="card-title mb-0">Timeline</h5>
                             </div>
@@ -294,7 +294,7 @@
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-6">
-                        <div class="card">
+                        <div class="card placeholder-glow">
                             <div class="card-header border-bottom">
                                 <h5 class="card-title mb-0">Shipment & Details</h5>
                             </div>
@@ -337,7 +337,7 @@
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-12">
-                        <div class="card">
+                        <div class="card placeholder-glow">
                             <div class="card-header border-bottom">
                                 <h5 class="card-title mb-0">Purchase Summary</h5>
                             </div>
@@ -389,7 +389,7 @@
 
                 <div class="row">
                     <div class="col-xl-8 col-lg-12">
-                        <div class="card">
+                        <div class="card placeholder-glow">
                             <div class="card-header border-bottom">
                                 <h5 class="mb-0 card-title">Order Items</h5>
                             </div>
