Update placeholders for verify search inputs
Replace generic "Search" placeholders with example code formats to clarify expected input. The tag search input (id=verify-search-input-tag) now shows "INF-A00-A00", and the order search input (id=verify-search-input-order) shows "INF-ORDER-A000000" to improve UX and reduce input errors.

--- a/frontend/verify/index.html
+++ b/frontend/verify/index.html
@@ -38,11 +38,11 @@
             <i class="ti ti-x fs-30"></i>
         </button>
         <form class="verify-search-panel__form" action="">
-            <input class="verify-search-panel__input" name="search" type="search" placeholder="Search" autocomplete="off"
+            <input class="verify-search-panel__input" name="search" type="search" placeholder="INF-A00-A00" autocomplete="off"
                 autocorrect="off" autocapitalize="characters" spellcheck="false" id="verify-search-input-tag"/>
             <span class="verify-search-panel__info" id="verify-search-info-tag">Hit enter to search tag code or ESC to close</span>
 
-            <input class="verify-search-panel__input d-none" name="search" type="search" placeholder="Search" autocomplete="off"
+            <input class="verify-search-panel__input d-none" name="search" type="search" placeholder="INF-ORDER-A000000" autocomplete="off"
                 autocorrect="off" autocapitalize="characters" spellcheck="false" id="verify-search-input-order"/>
             <span class="verify-search-panel__info d-none" id="verify-search-info-order">Hit enter to search order code or ESC to close</span>
         </form>
