--- a/frontend/verify/index.html
+++ b/frontend/verify/index.html
@@ -46,7 +46,8 @@
 
             <input class="verify-search-panel__input d-none" name="search" type="search" placeholder="INFO-A000000" autocomplete="off"
                 autocorrect="off" autocapitalize="characters" spellcheck="false" id="verify-search-input-order"/>
-                <span class="verify-search-panel__info verify-info-order verify-search-panel_eg mb-1 d-none">Please insert your order number</span>
+                <span class="verify-search-panel__info verify-info-order verify-search-panel_eg mb-1 d-none">e.g. INFO-X000000</span>
+            <span class="verify-search-panel__info verify-info-order mt-2 mb-1 d-none" id="verify-search-info-order">Please insert your order number</span>
             <span class="verify-search-panel__info verify-info-order mt-2 mb-1 d-none" id="verify-search-info-order">Hit enter to search order code or ESC to close</span>
         </form>
     </div>
