--- a/frontend/verify/index.html
+++ b/frontend/verify/index.html
@@ -72,24 +72,13 @@
                 <!-- Topbar Start -->
                 <header class="">
                     <div class="page-container topbar-menu">
-                        <div class="d-flex align-items-center justify-content-center w-100">
+                        <div class="d-flex align-items-center justify-content-center w-100 border-bottom-black-1">
                             <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/backend/images/logo-website.png"
                                 alt="logo" />
                         </div>
                     </div>
                 </header>
                 <!-- Topbar End -->
-
-                <!-- Horizontal Menu Start -->
-                <header class="topnav">
-                    <nav class="navbar navbar-expand-lg">
-                        <div class="page-container">
-                            <div class="collapse navbar-collapse justify-content-center" id="topnav-menu-content"></div>
-                        </div>
-                    </nav>
-                </header>
-                <!-- Horizontal Menu End -->
-
 
                 <!-- ============================================================== -->
                 <!-- Start Page Content here -->
@@ -293,28 +282,20 @@
                             </div>
 
 
-                            <div class="col-xl-4 col-lg-5 col-md-6">
+                            <div class="col-12">
                                 <div class="card overflow-hidden text-center h-100 p-xxl-4 p-3 mb-0">
-                                    <a href="index.html" class="auth-brand mb-3">
-                                        <img src="assets/images/logo-dark.png" alt="dark logo" height="24"
-                                            class="logo-dark">
-                                        <img src="assets/images/logo.png" alt="logo light" height="24"
-                                            class="logo-light">
-                                    </a>
+                                    
 
                                     <div class="mx-auto text-center">
                                         <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/backend/images/precious-not-found.png" alt="error 400 img" height="230">
 
                                         <h2 class="fw-bold mt-3 text-primary lh-base">Precious Not Found! </h2>
                                         <h4 class="mt-2 text-dark lh-base"># INF-W26-D01</h4>
-                                        <p class="text-muted fs-12 mb-3">Make sure the precious code is correct. Please check your input and search again.</p>
-                                        <a href="#" class="btn btn-infjew"><i class="ti ti-tag fs-22"></i> Back To Search</a>
+                                        <p class="text-muted fs-12 mb-3">Make sure the precious code is correct.<br/>Please check your input and search again.</p>
+                                        <a href="#" class="btn btn-infjew"><i class="ti ti-tag fs-22 me-3"></i> Back To Search</a>
                                     </div>
 
-                                    <p class="mt-3 mb-0">
-                                        <script>document.write(new Date().getFullYear())</script> © Boron - By <span
-                                            class="fw-bold text-decoration-underline text-uppercase text-reset fs-12">Coderthemes</span>
-                                    </p>
+                                    
                                 </div>
                             </div>
 
