--- a/frontend/verify/index.html
+++ b/frontend/verify/index.html
@@ -816,6 +816,26 @@
                                 <a href="#" class="btn btn-outline-primary">DOWNLOAD</a>
                             </div>
 
+                            <div class="col-12 d-none" id="verify-order-not-found">
+                                <div class="card overflow-hidden text-center h-100 p-xxl-4 p-3 mb-0">
+
+
+                                    <div class="mx-auto text-center">
+                                        <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/backend/images/precious-not-found.png"
+                                            alt="error 400 img" height="230">
+
+                                        <h2 class="fw-bold mt-3 text-primary lh-base">Order Not Found! </h2>
+                                        <h4 class="mt-2 text-dark lh-base"># INFO-A000000</h4>
+                                        <p class="text-muted fs-12 mb-3">Make sure the Order Number is
+                                            correct.<br />Please check your input and search again.</p>
+                                        <a href="#" class="btn btn-infjew mb-3" id="verify-order-back-to-search-btn"><i class="ti ti-receipt fs-22 me-2"></i>
+                                            Back To Search</a>
+                                    </div>
+
+
+                                </div>
+                            </div>
+
 
                         </div>
 
