--- a/frontend/admin/precious-list.html
+++ b/frontend/admin/precious-list.html
@@ -66,7 +66,7 @@
         <!--- Sidenav Menu -->
         <ul class="side-nav">
           <li class="side-nav-item">
-            <a href="https://www.infjew.com" class="side-nav-link">
+            <a href="https://www.infjew.com" class="side-nav-link" target="_blank">
               <span class="menu-icon"><i class="ti ti-infinity"></i></span>
               <span class="menu-text"> Index </span>
               <span class="badge bg-infjew rounded-pill">W</span>
@@ -125,12 +125,12 @@
             <div class="collapse" id="sidebarStore">
               <ul class="sub-menu">
                 <li class="side-nav-item">
-                  <a href="https://store.infjew.com" class="side-nav-link">
+                  <a href="https://store.infjew.com" class="side-nav-link" target="_blank">
                     <span class="menu-text">My Store</span>
                   </a>
                 </li>
                 <li class="side-nav-item">
-                  <a href="https://admin.shopify.com/store/bk0ft5-jm?ui_locales=en" class="side-nav-link">
+                  <a href="https://admin.shopify.com/store/bk0ft5-jm?ui_locales=en" class="side-nav-link" target="_blank">
                     <span class="menu-text">Shopify</span><span class="badge bg-infjew rounded-pill">S</span>
                   </a>
                 </li>
@@ -265,7 +265,7 @@
                                     <div class="mb-3">
                                       <label for="add-precious-id" class="form-label">Precious Id</label>
                                       <input type="text" class="form-control" data-toggle="input-mask"
-                                        data-mask-format="INF-a00-a00" id="add-precious-id" />
+                                        data-mask-format="INF-A00-A00" id="add-precious-id" />
                                       <span class="fs-13 text-muted">e.g "INF-W26-C01"</span>
                                     </div>
                                   </div>
@@ -437,7 +437,7 @@
                                     <div class="mb-3">
                                       <label for="edit-precious-itemid" class="form-label">Precious Item Id</label>
                                       <input type="text" class="form-control" data-toggle="input-mask"
-                                        data-mask-format="INF-a00-a00" id="edit-precious-itemid" />
+                                        data-mask-format="INF-A00-A00" id="edit-precious-itemid" />
                                       <span class="fs-13 text-muted">e.g "INF-W26-C01"</span>
                                     </div>
                                   </div>
