--- a/frontend/admin/user.html
+++ b/frontend/admin/user.html
@@ -59,7 +59,7 @@
         <!--- Sidenav Menu -->
         <ul class="side-nav">
           <li class="side-nav-item">
-            <a href="https://www.infjew.com" class="side-nav-link">
+            <a href="https://www.infjew.com" class="side-nav-link" target="_blank">
               <span class="menu-icon"><i class="ti ti-infinity"></i></span>
               <span class="menu-text"> Index </span>
               <span class="badge bg-infjew rounded-pill">W</span>
@@ -118,12 +118,12 @@
             <div class="collapse" id="sidebarStore">
               <ul class="sub-menu">
                 <li class="side-nav-item">
-                  <a href="https://store.infjew.com" class="side-nav-link">
+                  <a href="https://store.infjew.com" class="side-nav-link" target="_blank">
                     <span class="menu-text">My Store</span>
                   </a>
                 </li>
                 <li class="side-nav-item">
-                  <a href="https://admin.shopify.com/store/bk0ft5-jm?ui_locales=en" class="side-nav-link">
+                  <a href="https://admin.shopify.com/store/bk0ft5-jm?ui_locales=en" class="side-nav-link" target="_blank">
                     <span class="menu-text">Shopify</span><span class="badge bg-infjew rounded-pill">S</span>
                   </a>
                 </li>
