--- a/frontend/admin/index.html
+++ b/frontend/admin/index.html
@@ -55,23 +55,8 @@
       <div data-simplebar>
         <!--- Sidenav Menu -->
         <ul class="side-nav">
-          <li class="side-nav-item">
-            <a href="https://www.infjew.com" class="side-nav-link" target="_blank"> 
-              <span class="menu-icon"><i class="ti ti-infinity"></i></span>
-              <span class="menu-text"> Index </span>
-              <span class="badge bg-infjew rounded-pill">W</span>
-            </a>
-          </li>
+          
           <li class="side-nav-title mt-2">Dashboard</li>
-          <li class="side-nav-item">
-            <a href="/index" class="side-nav-link">
-              <span class="menu-icon"><i class="ti ti-dashboard"></i></span>
-              <span class="menu-text"> Dashboard </span>
-              <span class="badge bg-infjew rounded-pill">D</span>
-            </a>
-          </li>
-
-          <li class="side-nav-title mt-2">Functions</li>
 
           <li class="side-nav-item">
             <a data-bs-toggle="collapse" href="#sidebarPrecious" aria-expanded="false" aria-controls="sidebarEcommerce"
@@ -121,7 +106,8 @@
                   </a>
                 </li>
                 <li class="side-nav-item">
-                  <a href="https://admin.shopify.com/store/bk0ft5-jm?ui_locales=en" class="side-nav-link" target="_blank">
+                  <a href="https://admin.shopify.com/store/bk0ft5-jm?ui_locales=en" class="side-nav-link"
+                    target="_blank">
                     <span class="menu-text">Shopify</span><span class="badge bg-infjew rounded-pill">S</span>
                   </a>
                 </li>
@@ -129,8 +115,22 @@
             </div>
           </li>
 
+          <li class="side-nav-title mt-2">Verify</li>
+          <li class="side-nav-item">
+            <a href="https://verify.infjew.com" class="side-nav-link">
+              <span class="menu-icon"><i class="ti ti-shopping-bag-check"></i></span>
+              <span class="menu-text"> Verify </span>
+            </a>
+          </li>
 
-      
+          <li class="side-nav-title mt-2">Official Website</li>
+          <li class="side-nav-item">
+            <a href="https://www.infjew.com" class="side-nav-link" target="_blank">
+              <span class="menu-icon"><i class="ti ti-infinity"></i></span>
+              <span class="menu-text"> Index </span>
+              <span class="badge bg-infjew rounded-pill">W</span>
+            </a>
+          </li>
         </ul>
 
         <div class="clearfix"></div>
@@ -971,8 +971,9 @@
         <div class="page-container">
           <div class="row">
             <div class="col-md-6 text-center text-md-start">
-              2025 - <script>
-              document.write(new Date().getFullYear());
+              2025 -
+              <script>
+                document.write(new Date().getFullYear());
               </script>
               © INFJEW. All rights reserved.
             </div>
