--- a/frontend/admin/user.html
+++ b/frontend/admin/user.html
@@ -57,24 +57,9 @@
 
       <div data-simplebar>
         <!--- Sidenav Menu -->
-        <ul class="side-nav">
-          <li class="side-nav-item">
-            <a href="https://www.infjew.com" class="side-nav-link" target="_blank">
-              <span class="menu-icon"><i class="ti ti-infinity"></i></span>
-              <span class="menu-text"> Index </span>
-              <span class="badge bg-infjew rounded-pill">W</span>
-            </a>
-          </li>
+       <ul class="side-nav">
+          
           <li class="side-nav-title mt-2">Dashboard</li>
-          <li class="side-nav-item">
-            <a href="/index" class="side-nav-link">
-              <span class="menu-icon"><i class="ti ti-dashboard"></i></span>
-              <span class="menu-text"> Dashboard </span>
-              <span class="badge bg-infjew rounded-pill">D</span>
-            </a>
-          </li>
-
-          <li class="side-nav-title mt-2">Functions</li>
 
           <li class="side-nav-item">
             <a data-bs-toggle="collapse" href="#sidebarPrecious" aria-expanded="false" aria-controls="sidebarEcommerce"
@@ -106,6 +91,7 @@
             </a>
           </li>
 
+
           <li class="side-nav-title mt-2">Store</li>
 
           <li class="side-nav-item">
@@ -123,12 +109,30 @@
                   </a>
                 </li>
                 <li class="side-nav-item">
-                  <a href="https://admin.shopify.com/store/bk0ft5-jm?ui_locales=en" class="side-nav-link" target="_blank">
+                  <a href="https://admin.shopify.com/store/bk0ft5-jm?ui_locales=en" class="side-nav-link"
+                    target="_blank">
                     <span class="menu-text">Shopify</span><span class="badge bg-infjew rounded-pill">S</span>
                   </a>
                 </li>
               </ul>
             </div>
+          </li>
+
+          <li class="side-nav-title mt-2">Verify</li>
+          <li class="side-nav-item">
+            <a href="https://verify.infjew.com" class="side-nav-link">
+              <span class="menu-icon"><i class="ti ti-shopping-bag-check"></i></span>
+              <span class="menu-text"> Verify </span>
+            </a>
+          </li>
+
+          <li class="side-nav-title mt-2">Official Website</li>
+          <li class="side-nav-item">
+            <a href="https://www.infjew.com" class="side-nav-link" target="_blank">
+              <span class="menu-icon"><i class="ti ti-infinity"></i></span>
+              <span class="menu-text"> Index </span>
+              <span class="badge bg-infjew rounded-pill">W</span>
+            </a>
           </li>
         </ul>
 
