--- a/frontend/index.html
+++ b/frontend/index.html
@@ -251,7 +251,7 @@
             <div class="feature-content">
               <h5>Free Shipping</h5>
               <p>
-                We offer free worldwide shipping on all orders over $400 USD.
+                We offer free worldwide shipping on all orders over $199 USD.
                 Your INFJEW Precious will be delivered with care and fully
                 trackable, no matter where you are.
               </p>
@@ -630,8 +630,8 @@
                   <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/user.png" alt="" />
                 </div>
                 <div class="testimonial-title">
-                  <h5>Liam W.</h5>
-                  <p>@wildearthliam</p>
+                  <h5>Sophia Reyes</h5>
+                  <p>@sophia.starlunar</p>
                 </div>
               </div>
               <div class="testimonial-rating">
@@ -643,9 +643,9 @@
               </div>
               <div class="testimonial-content">
                 <p>
-                  "Hard to believe something this beautiful comes from nature.
-                  It looks and feels like a luxury piece. The craftsmanship is
-                  unreal."
+                  "This Stelluna bracelet is absolutely stunning—every bead feels like a tiny piece of art. The
+                  craftsmanship is incredible, and it adds such a unique, elevated touch to my everyday look. Highly
+                  recommend for anyone seeking something truly special!."
                 </p>
               </div>
             </div>
@@ -655,8 +655,8 @@
                   <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/user.png" alt="" />
                 </div>
                 <div class="testimonial-title">
-                  <h5>Sophia M.</h5>
-                  <p>@sophiemoon</p>
+                  <h5>Ethan Park</h5>
+                  <p>@ethan.wornstories</p>
                 </div>
               </div>
               <div class="testimonial-rating">
@@ -668,9 +668,9 @@
               </div>
               <div class="testimonial-content">
                 <p>
-                  "I wear it almost every day - it's stylish, subtle, and
-                  gives off this quiet elegance. Feels like I'm wearing a part
-                  of something ancient and sacred."
+                  "I've only had it for three weeks and the transformation is already magical. Started as creamy white,
+                  now warming into a soft amber glow. The way it evolves on your wrist feels so personal and alive - I
+                  never take it off."
                 </p>
               </div>
             </div>
@@ -680,8 +680,8 @@
                   <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/user.png" alt="" />
                 </div>
                 <div class="testimonial-title">
-                  <h5>Jason T.</h5>
-                  <p>@jtcollects</p>
+                  <h5>Ava Lin</h5>
+                  <p>@avalin</p>
                 </div>
               </div>
               <div class="testimonial-rating">
@@ -693,9 +693,9 @@
               </div>
               <div class="testimonial-content">
                 <p>
-                  "As a fashion accessory, it's just cool. Works with
-                  streetwear or something more minimal. You can really feel
-                  the handcrafted detail."
+                  "The barrel - cut beads are so comfortable against the skin, and the natural star - moon patterns are
+                  mesmerizing. Wearing it during meditation brings an instant sense of calm. Thank you to the artisans
+                  for creating something this thoughtful."
                 </p>
               </div>
             </div>
@@ -705,8 +705,8 @@
                   <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/user.png" alt="" />
                 </div>
                 <div class="testimonial-title">
-                  <h5>Emily C.</h5>
-                  <p>@emfromseattle</p>
+                  <h5>Julian Moreau</h5>
+                  <p>@julian.m</p>
                 </div>
               </div>
               <div class="testimonial-rating">
@@ -718,9 +718,9 @@
               </div>
               <div class="testimonial-content">
                 <p>
-                  "Absolutely love it. There's a mysterious energy to it -
-                  like something from the East, natural and spiritual. Knowing
-                  it's handmade makes it even more special."
+                  "Completely obsessed with how no two beads are identical—mine has these beautiful, organic
+                  imperfections that make it feel like a gift from nature itself. The quality and attention to detail
+                  are unmatched."
                 </p>
               </div>
             </div>
@@ -730,8 +730,8 @@
                   <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/user.png" alt="" />
                 </div>
                 <div class="testimonial-title">
-                  <h5>Noah K.</h5>
-                  <p>@knotkulture</p>
+                  <h5>Mia Thompson</h5>
+                  <p>@miashadow</p>
                 </div>
               </div>
               <div class="testimonial-rating">
@@ -743,9 +743,8 @@
               </div>
               <div class="testimonial-content">
                 <p>
-                  "A perfect blend of culture and craftsmanship. The Stelluna
-                  beads change over time - it's like it grows with you. That's
-                  rare."
+                  "Bought the specialty skull-carved version and it's the perfect blend of edgy and spiritual. The
+                  polish is flawless, and it gets compliments everywhere I go. Best purchase I’ve made this year."
                 </p>
               </div>
             </div>
@@ -809,11 +808,11 @@
           <div class="col-md-5 col-12">
             <div class="copyright-area">
               <p class="copyright-line">
-               2025 -
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-              @ INFJEW. All rights reserved.
+                2025 -
+                <script>
+                  document.write(new Date().getFullYear());
+                </script>
+                @ INFJEW. All rights reserved.
               </p>
             </div>
           </div>
